SONARIAC-1878 S6294 should not raise when a resource matches a log group which name includes a template parameter (#290)